primitives/api/test/tests/ui/changed_in_no_default_method.stderr
error: There is no 'default' method with this name (without `changed_in` attribute).
The 'default' method is used to call into the latest implementation.
  --> $DIR/changed_in_no_default_method.rs:15:6
   |
15 |         fn test(data: u64);
   |            ^^^^
